qt6/gen_qtablewidget.h

typedef struct QAbstractItemDelegate QAbstractItemDelegate;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
bool QTableWidget_override_virtual_timerEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QTableWidget_override_virtual_horizontalOffset(void* self, intptr_t slot);
int QTableWidget_virtualbase_horizontalOffset(const void* self);
bool QTableWidget_override_virtual_verticalOffset(void* self, intptr_t slot);
int QTableWidget_virtualbase_verticalOffset(const void* self);
bool QTableWidget_override_virtual_moveCursor(void* self, intptr_t slot);
QModelIndex* QTableWidget_virtualbase_moveCursor(void* self, int cursorAction, int modifiers);
bool QTableWidget_override_virtual_setSelection(void* self, intptr_t slot);
void QTableWidget_virtualbase_setSelection(void* self, QRect* rect, int command);
bool QTableWidget_override_virtual_visualRegionForSelection(void* self, intptr_t slot);
QRegion* QTableWidget_virtualbase_visualRegionForSelection(const void* self, QItemSelection* selection);
bool QTableWidget_override_virtual_selectedIndexes(void* self, intptr_t slot);
struct miqt_array /* of QModelIndex* */  QTableWidget_virtualbase_selectedIndexes(const void* self);
bool QTableWidget_override_virtual_updateGeometries(void* self, intptr_t slot);
void QTableWidget_virtualbase_updateGeometries(void* self);
bool QTableWidget_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QTableWidget_virtualbase_viewportSizeHint(const void* self);
bool QTableWidget_override_virtual_sizeHintForRow(void* self, intptr_t slot);
int QTableWidget_virtualbase_sizeHintForRow(const void* self, int row);
bool QTableWidget_override_virtual_sizeHintForColumn(void* self, intptr_t slot);
int QTableWidget_virtualbase_sizeHintForColumn(const void* self, int column);
bool QTableWidget_override_virtual_verticalScrollbarAction(void* self, intptr_t slot);
void QTableWidget_virtualbase_verticalScrollbarAction(void* self, int action);
bool QTableWidget_override_virtual_horizontalScrollbarAction(void* self, intptr_t slot);
void QTableWidget_virtualbase_horizontalScrollbarAction(void* self, int action);
bool QTableWidget_override_virtual_isIndexHidden(void* self, intptr_t slot);
bool QTableWidget_virtualbase_isIndexHidden(const void* self, QModelIndex* index);
bool QTableWidget_override_virtual_selectionChanged(void* self, intptr_t slot);
void QTableWidget_virtualbase_selectionChanged(void* self, QItemSelection* selected, QItemSelection* deselected);
bool QTableWidget_override_virtual_currentChanged(void* self, intptr_t slot);
void QTableWidget_virtualbase_currentChanged(void* self, QModelIndex* current, QModelIndex* previous);
bool QTableWidget_override_virtual_keyboardSearch(void* self, intptr_t slot);
void QTableWidget_virtualbase_keyboardSearch(void* self, struct miqt_string search);
bool QTableWidget_override_virtual_itemDelegateForIndex(void* self, intptr_t slot);
QAbstractItemDelegate* QTableWidget_virtualbase_itemDelegateForIndex(const void* self, QModelIndex* index);
bool QTableWidget_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QTableWidget_virtualbase_inputMethodQuery(const void* self, int query);
bool QTableWidget_override_virtual_reset(void* self, intptr_t slot);
void QTableWidget_virtualbase_reset(void* self);
bool QTableWidget_override_virtual_selectAll(void* self, intptr_t slot);
void QTableWidget_virtualbase_selectAll(void* self);
bool QTableWidget_override_virtual_dataChanged(void* self, intptr_t slot);
void QTableWidget_virtualbase_dataChanged(void* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
bool QTableWidget_override_virtual_rowsInserted(void* self, intptr_t slot);
void QTableWidget_virtualbase_rowsInserted(void* self, QModelIndex* parent, int start, int end);
bool QTableWidget_override_virtual_rowsAboutToBeRemoved(void* self, intptr_t slot);
void QTableWidget_virtualbase_rowsAboutToBeRemoved(void* self, QModelIndex* parent, int start, int end);
bool QTableWidget_override_virtual_updateEditorData(void* self, intptr_t slot);
void QTableWidget_virtualbase_updateEditorData(void* self);
bool QTableWidget_override_virtual_updateEditorGeometries(void* self, intptr_t slot);
void QTableWidget_virtualbase_updateEditorGeometries(void* self);
bool QTableWidget_override_virtual_verticalScrollbarValueChanged(void* self, intptr_t slot);
void QTableWidget_virtualbase_verticalScrollbarValueChanged(void* self, int value);
bool QTableWidget_override_virtual_horizontalScrollbarValueChanged(void* self, intptr_t slot);
void QTableWidget_virtualbase_horizontalScrollbarValueChanged(void* self, int value);
bool QTableWidget_override_virtual_closeEditor(void* self, intptr_t slot);
void QTableWidget_virtualbase_closeEditor(void* self, QWidget* editor, int hint);
bool QTableWidget_override_virtual_commitData(void* self, intptr_t slot);
void QTableWidget_virtualbase_commitData(void* self, QWidget* editor);
bool QTableWidget_override_virtual_editorDestroyed(void* self, intptr_t slot);
void QTableWidget_virtualbase_editorDestroyed(void* self, QObject* editor);
bool QTableWidget_override_virtual_edit2(void* self, intptr_t slot);
bool QTableWidget_virtualbase_edit2(void* self, QModelIndex* index, int trigger, QEvent* event);
bool QTableWidget_override_virtual_selectionCommand(void* self, intptr_t slot);
int QTableWidget_virtualbase_selectionCommand(const void* self, QModelIndex* index, QEvent* event);
bool QTableWidget_override_virtual_startDrag(void* self, intptr_t slot);
void QTableWidget_virtualbase_startDrag(void* self, int supportedActions);
bool QTableWidget_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QTableWidget_virtualbase_focusNextPrevChild(void* self, bool next);
bool QTableWidget_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QTableWidget_virtualbase_viewportEvent(void* self, QEvent* event);
bool QTableWidget_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QTableWidget_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QTableWidget_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QTableWidget_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QTableWidget_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QTableWidget_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QTableWidget_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);