qt6/gen_qtablewidget.nim

proc fQTableWidget_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_timerEvent".}
proc fcQTableWidget_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_timerEvent".}
proc fQTableWidget_virtualbase_horizontalOffset(self: pointer, ): cint{.importc: "QTableWidget_virtualbase_horizontalOffset".}
proc fcQTableWidget_override_virtual_horizontalOffset(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_horizontalOffset".}
proc fQTableWidget_virtualbase_verticalOffset(self: pointer, ): cint{.importc: "QTableWidget_virtualbase_verticalOffset".}
proc fcQTableWidget_override_virtual_verticalOffset(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_verticalOffset".}
proc fQTableWidget_virtualbase_moveCursor(self: pointer, cursorAction: cint, modifiers: cint): pointer{.importc: "QTableWidget_virtualbase_moveCursor".}
proc fcQTableWidget_override_virtual_moveCursor(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_moveCursor".}
proc fQTableWidget_virtualbase_setSelection(self: pointer, rect: pointer, command: cint): void{.importc: "QTableWidget_virtualbase_setSelection".}
proc fcQTableWidget_override_virtual_setSelection(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_setSelection".}
proc fQTableWidget_virtualbase_visualRegionForSelection(self: pointer, selection: pointer): pointer{.importc: "QTableWidget_virtualbase_visualRegionForSelection".}
proc fcQTableWidget_override_virtual_visualRegionForSelection(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_visualRegionForSelection".}
proc fQTableWidget_virtualbase_selectedIndexes(self: pointer, ): struct_miqt_array{.importc: "QTableWidget_virtualbase_selectedIndexes".}
proc fcQTableWidget_override_virtual_selectedIndexes(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_selectedIndexes".}
proc fQTableWidget_virtualbase_updateGeometries(self: pointer, ): void{.importc: "QTableWidget_virtualbase_updateGeometries".}
proc fcQTableWidget_override_virtual_updateGeometries(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_updateGeometries".}
proc fQTableWidget_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QTableWidget_virtualbase_viewportSizeHint".}
proc fcQTableWidget_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_viewportSizeHint".}
proc fQTableWidget_virtualbase_sizeHintForRow(self: pointer, row: cint): cint{.importc: "QTableWidget_virtualbase_sizeHintForRow".}
proc fcQTableWidget_override_virtual_sizeHintForRow(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_sizeHintForRow".}
proc fQTableWidget_virtualbase_sizeHintForColumn(self: pointer, column: cint): cint{.importc: "QTableWidget_virtualbase_sizeHintForColumn".}
proc fcQTableWidget_override_virtual_sizeHintForColumn(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_sizeHintForColumn".}
proc fQTableWidget_virtualbase_verticalScrollbarAction(self: pointer, action: cint): void{.importc: "QTableWidget_virtualbase_verticalScrollbarAction".}
proc fcQTableWidget_override_virtual_verticalScrollbarAction(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_verticalScrollbarAction".}
proc fQTableWidget_virtualbase_horizontalScrollbarAction(self: pointer, action: cint): void{.importc: "QTableWidget_virtualbase_horizontalScrollbarAction".}
proc fcQTableWidget_override_virtual_horizontalScrollbarAction(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_horizontalScrollbarAction".}
proc fQTableWidget_virtualbase_isIndexHidden(self: pointer, index: pointer): bool{.importc: "QTableWidget_virtualbase_isIndexHidden".}
proc fcQTableWidget_override_virtual_isIndexHidden(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_isIndexHidden".}
proc fQTableWidget_virtualbase_selectionChanged(self: pointer, selected: pointer, deselected: pointer): void{.importc: "QTableWidget_virtualbase_selectionChanged".}
proc fcQTableWidget_override_virtual_selectionChanged(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_selectionChanged".}
proc fQTableWidget_virtualbase_currentChanged(self: pointer, current: pointer, previous: pointer): void{.importc: "QTableWidget_virtualbase_currentChanged".}
proc fcQTableWidget_override_virtual_currentChanged(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_currentChanged".}
proc fQTableWidget_virtualbase_keyboardSearch(self: pointer, search: struct_miqt_string): void{.importc: "QTableWidget_virtualbase_keyboardSearch".}
proc fcQTableWidget_override_virtual_keyboardSearch(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_keyboardSearch".}
proc fQTableWidget_virtualbase_itemDelegateForIndex(self: pointer, index: pointer): pointer{.importc: "QTableWidget_virtualbase_itemDelegateForIndex".}
proc fcQTableWidget_override_virtual_itemDelegateForIndex(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_itemDelegateForIndex".}
proc fQTableWidget_virtualbase_inputMethodQuery(self: pointer, query: cint): pointer{.importc: "QTableWidget_virtualbase_inputMethodQuery".}
proc fcQTableWidget_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_inputMethodQuery".}
proc fQTableWidget_virtualbase_reset(self: pointer, ): void{.importc: "QTableWidget_virtualbase_reset".}
proc fcQTableWidget_override_virtual_reset(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_reset".}
proc fQTableWidget_virtualbase_selectAll(self: pointer, ): void{.importc: "QTableWidget_virtualbase_selectAll".}
proc fcQTableWidget_override_virtual_selectAll(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_selectAll".}
proc fQTableWidget_virtualbase_dataChanged(self: pointer, topLeft: pointer, bottomRight: pointer, roles: struct_miqt_array): void{.importc: "QTableWidget_virtualbase_dataChanged".}
proc fcQTableWidget_override_virtual_dataChanged(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_dataChanged".}
proc fQTableWidget_virtualbase_rowsInserted(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QTableWidget_virtualbase_rowsInserted".}
proc fcQTableWidget_override_virtual_rowsInserted(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_rowsInserted".}
proc fQTableWidget_virtualbase_rowsAboutToBeRemoved(self: pointer, parent: pointer, start: cint, endVal: cint): void{.importc: "QTableWidget_virtualbase_rowsAboutToBeRemoved".}
proc fcQTableWidget_override_virtual_rowsAboutToBeRemoved(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_rowsAboutToBeRemoved".}
proc fQTableWidget_virtualbase_updateEditorData(self: pointer, ): void{.importc: "QTableWidget_virtualbase_updateEditorData".}
proc fcQTableWidget_override_virtual_updateEditorData(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_updateEditorData".}
proc fQTableWidget_virtualbase_updateEditorGeometries(self: pointer, ): void{.importc: "QTableWidget_virtualbase_updateEditorGeometries".}
proc fcQTableWidget_override_virtual_updateEditorGeometries(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_updateEditorGeometries".}
proc fQTableWidget_virtualbase_verticalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QTableWidget_virtualbase_verticalScrollbarValueChanged".}
proc fcQTableWidget_override_virtual_verticalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_verticalScrollbarValueChanged".}
proc fQTableWidget_virtualbase_horizontalScrollbarValueChanged(self: pointer, value: cint): void{.importc: "QTableWidget_virtualbase_horizontalScrollbarValueChanged".}
proc fcQTableWidget_override_virtual_horizontalScrollbarValueChanged(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_horizontalScrollbarValueChanged".}
proc fQTableWidget_virtualbase_closeEditor(self: pointer, editor: pointer, hint: cint): void{.importc: "QTableWidget_virtualbase_closeEditor".}
proc fcQTableWidget_override_virtual_closeEditor(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_closeEditor".}
proc fQTableWidget_virtualbase_commitData(self: pointer, editor: pointer): void{.importc: "QTableWidget_virtualbase_commitData".}
proc fcQTableWidget_override_virtual_commitData(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_commitData".}
proc fQTableWidget_virtualbase_editorDestroyed(self: pointer, editor: pointer): void{.importc: "QTableWidget_virtualbase_editorDestroyed".}
proc fcQTableWidget_override_virtual_editorDestroyed(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_editorDestroyed".}
proc fQTableWidget_virtualbase_edit2(self: pointer, index: pointer, trigger: cint, event: pointer): bool{.importc: "QTableWidget_virtualbase_edit2".}
proc fcQTableWidget_override_virtual_edit2(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_edit2".}
proc fQTableWidget_virtualbase_selectionCommand(self: pointer, index: pointer, event: pointer): cint{.importc: "QTableWidget_virtualbase_selectionCommand".}
proc fcQTableWidget_override_virtual_selectionCommand(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_selectionCommand".}
proc fQTableWidget_virtualbase_startDrag(self: pointer, supportedActions: cint): void{.importc: "QTableWidget_virtualbase_startDrag".}
proc fcQTableWidget_override_virtual_startDrag(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_startDrag".}
proc fQTableWidget_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QTableWidget_virtualbase_focusNextPrevChild".}
proc fcQTableWidget_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_focusNextPrevChild".}
proc fQTableWidget_virtualbase_viewportEvent(self: pointer, event: pointer): bool{.importc: "QTableWidget_virtualbase_viewportEvent".}
proc fcQTableWidget_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_viewportEvent".}
proc fQTableWidget_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_mousePressEvent".}
proc fcQTableWidget_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_mousePressEvent".}
proc fQTableWidget_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_mouseMoveEvent".}
proc fcQTableWidget_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_mouseMoveEvent".}
proc fQTableWidget_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_mouseReleaseEvent".}
proc fcQTableWidget_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_mouseReleaseEvent".}
proc fQTableWidget_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_mouseDoubleClickEvent".}
proc fcQTableWidget_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_mouseDoubleClickEvent".}
proc fQTableWidget_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_dragEnterEvent".}
proc fcQTableWidget_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_dragEnterEvent".}
proc fQTableWidget_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QTableWidget_virtualbase_dragMoveEvent".}
proc fcQTableWidget_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QTableWidget_override_virtual_dragMoveEvent".}
